syntax = "proto3";

package auth;

option go_package = "api/authpb";

message LoginUserRequest {
    string login = 1;
    string password = 2;
}

message LoginUserResponse {
    string bearer_token = 1;
}

service Auth {
    rpc LoginUser(LoginUserRequest) returns (LoginUserResponse);
}
