syntax = "proto3";

package register;

option go_package = "api/registerpb";

message RegisterUserRequest {
    string login = 1;
    string password = 2;
}

message RegisterUserResponse {
    string bearer_token = 1;
}

service Register {
    rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
}
